--- a/notebooks/Marketing_Campaign_Experiment.ipynb
+++ b/notebooks/Marketing_Campaign_Experiment.ipynb
@@ -1,6 +1,554 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8b1c87d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "pd.set_option('display.max_columns', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "02db1e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"/Users/friedatims-jansma/code/FriedaTims-Jansma/post_bootcamp_projects/notebooks/marketing_campaign.csv\",sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "14c4833c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Year_Birth</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Kidhome</th>\n",
+       "      <th>Teenhome</th>\n",
+       "      <th>Dt_Customer</th>\n",
+       "      <th>Recency</th>\n",
+       "      <th>MntWines</th>\n",
+       "      <th>MntFruits</th>\n",
+       "      <th>MntMeatProducts</th>\n",
+       "      <th>MntFishProducts</th>\n",
+       "      <th>MntSweetProducts</th>\n",
+       "      <th>MntGoldProds</th>\n",
+       "      <th>NumDealsPurchases</th>\n",
+       "      <th>NumWebPurchases</th>\n",
+       "      <th>NumCatalogPurchases</th>\n",
+       "      <th>NumStorePurchases</th>\n",
+       "      <th>NumWebVisitsMonth</th>\n",
+       "      <th>AcceptedCmp3</th>\n",
+       "      <th>AcceptedCmp4</th>\n",
+       "      <th>AcceptedCmp5</th>\n",
+       "      <th>AcceptedCmp1</th>\n",
+       "      <th>AcceptedCmp2</th>\n",
+       "      <th>Complain</th>\n",
+       "      <th>Z_CostContact</th>\n",
+       "      <th>Z_Revenue</th>\n",
+       "      <th>Response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5524</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>58138.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-09-04</td>\n",
+       "      <td>58</td>\n",
+       "      <td>635</td>\n",
+       "      <td>88</td>\n",
+       "      <td>546</td>\n",
+       "      <td>172</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2174</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>46344.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-03-08</td>\n",
+       "      <td>38</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4141</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>71613.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-08-21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>426</td>\n",
+       "      <td>49</td>\n",
+       "      <td>127</td>\n",
+       "      <td>111</td>\n",
+       "      <td>21</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6182</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>26646.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-02-10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5324</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>58293.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-01-19</td>\n",
+       "      <td>94</td>\n",
+       "      <td>173</td>\n",
+       "      <td>43</td>\n",
+       "      <td>118</td>\n",
+       "      <td>46</td>\n",
+       "      <td>27</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7446</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>62513.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-09-09</td>\n",
+       "      <td>16</td>\n",
+       "      <td>520</td>\n",
+       "      <td>42</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>965</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>55635.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2012-11-13</td>\n",
+       "      <td>34</td>\n",
+       "      <td>235</td>\n",
+       "      <td>65</td>\n",
+       "      <td>164</td>\n",
+       "      <td>50</td>\n",
+       "      <td>49</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6177</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>33454.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-05-08</td>\n",
+       "      <td>32</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4855</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>30351.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-06-06</td>\n",
+       "      <td>19</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5899</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>5648.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-03-13</td>\n",
+       "      <td>68</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ID  Year_Birth   Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
+       "0  5524        1957  Graduation         Single  58138.0        0         0   \n",
+       "1  2174        1954  Graduation         Single  46344.0        1         1   \n",
+       "2  4141        1965  Graduation       Together  71613.0        0         0   \n",
+       "3  6182        1984  Graduation       Together  26646.0        1         0   \n",
+       "4  5324        1981         PhD        Married  58293.0        1         0   \n",
+       "5  7446        1967      Master       Together  62513.0        0         1   \n",
+       "6   965        1971  Graduation       Divorced  55635.0        0         1   \n",
+       "7  6177        1985         PhD        Married  33454.0        1         0   \n",
+       "8  4855        1974         PhD       Together  30351.0        1         0   \n",
+       "9  5899        1950         PhD       Together   5648.0        1         1   \n",
+       "\n",
+       "  Dt_Customer  Recency  MntWines  MntFruits  MntMeatProducts  MntFishProducts  \\\n",
+       "0  2012-09-04       58       635         88              546              172   \n",
+       "1  2014-03-08       38        11          1                6                2   \n",
+       "2  2013-08-21       26       426         49              127              111   \n",
+       "3  2014-02-10       26        11          4               20               10   \n",
+       "4  2014-01-19       94       173         43              118               46   \n",
+       "5  2013-09-09       16       520         42               98                0   \n",
+       "6  2012-11-13       34       235         65              164               50   \n",
+       "7  2013-05-08       32        76         10               56                3   \n",
+       "8  2013-06-06       19        14          0               24                3   \n",
+       "9  2014-03-13       68        28          0                6                1   \n",
+       "\n",
+       "   MntSweetProducts  MntGoldProds  NumDealsPurchases  NumWebPurchases  \\\n",
+       "0                88            88                  3                8   \n",
+       "1                 1             6                  2                1   \n",
+       "2                21            42                  1                8   \n",
+       "3                 3             5                  2                2   \n",
+       "4                27            15                  5                5   \n",
+       "5                42            14                  2                6   \n",
+       "6                49            27                  4                7   \n",
+       "7                 1            23                  2                4   \n",
+       "8                 3             2                  1                3   \n",
+       "9                 1            13                  1                1   \n",
+       "\n",
+       "   NumCatalogPurchases  NumStorePurchases  NumWebVisitsMonth  AcceptedCmp3  \\\n",
+       "0                   10                  4                  7             0   \n",
+       "1                    1                  2                  5             0   \n",
+       "2                    2                 10                  4             0   \n",
+       "3                    0                  4                  6             0   \n",
+       "4                    3                  6                  5             0   \n",
+       "5                    4                 10                  6             0   \n",
+       "6                    3                  7                  6             0   \n",
+       "7                    0                  4                  8             0   \n",
+       "8                    0                  2                  9             0   \n",
+       "9                    0                  0                 20             1   \n",
+       "\n",
+       "   AcceptedCmp4  AcceptedCmp5  AcceptedCmp1  AcceptedCmp2  Complain  \\\n",
+       "0             0             0             0             0         0   \n",
+       "1             0             0             0             0         0   \n",
+       "2             0             0             0             0         0   \n",
+       "3             0             0             0             0         0   \n",
+       "4             0             0             0             0         0   \n",
+       "5             0             0             0             0         0   \n",
+       "6             0             0             0             0         0   \n",
+       "7             0             0             0             0         0   \n",
+       "8             0             0             0             0         0   \n",
+       "9             0             0             0             0         0   \n",
+       "\n",
+       "   Z_CostContact  Z_Revenue  Response  \n",
+       "0              3         11         1  \n",
+       "1              3         11         0  \n",
+       "2              3         11         0  \n",
+       "3              3         11         0  \n",
+       "4              3         11         0  \n",
+       "5              3         11         0  \n",
+       "6              3         11         0  \n",
+       "7              3         11         0  \n",
+       "8              3         11         1  \n",
+       "9              3         11         0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4c5852b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2240, 29)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e16ccbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
