--- a/notebooks/Marketing_Campaign_Experiment.ipynb
+++ b/notebooks/Marketing_Campaign_Experiment.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8b1c87d5",
+   "execution_count": 14,
+   "id": "9688a398",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "pd.set_option('display.max_columns', None)"
+    "pd.set_option('display.max_columns', None)\n",
+    "import numpy as np \n",
+    "import matplotlib as plt \n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "02db1e4e",
+   "id": "7ad3c4df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "14c4833c",
+   "id": "3e1d0686",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c5852b6",
+   "id": "53a014b4",
    "metadata": {},
    "outputs": [
     {
@@ -510,8 +513,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "78a7a438",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                      0\n",
+       "Year_Birth              0\n",
+       "Education               0\n",
+       "Marital_Status          0\n",
+       "Income                 24\n",
+       "Kidhome                 0\n",
+       "Teenhome                0\n",
+       "Dt_Customer             0\n",
+       "Recency                 0\n",
+       "MntWines                0\n",
+       "MntFruits               0\n",
+       "MntMeatProducts         0\n",
+       "MntFishProducts         0\n",
+       "MntSweetProducts        0\n",
+       "MntGoldProds            0\n",
+       "NumDealsPurchases       0\n",
+       "NumWebPurchases         0\n",
+       "NumCatalogPurchases     0\n",
+       "NumStorePurchases       0\n",
+       "NumWebVisitsMonth       0\n",
+       "AcceptedCmp3            0\n",
+       "AcceptedCmp4            0\n",
+       "AcceptedCmp5            0\n",
+       "AcceptedCmp1            0\n",
+       "AcceptedCmp2            0\n",
+       "Complain                0\n",
+       "Z_CostContact           0\n",
+       "Z_Revenue               0\n",
+       "Response                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5e16ccbd",
+   "id": "f7d77255",
    "metadata": {},
    "outputs": [],
    "source": []
