creating new columns dataframe

--- a/notebooks/Marketing_Campaign_Experiment.ipynb
+++ b/notebooks/Marketing_Campaign_Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90c406e0",
+   "id": "ad414cd7",
    "metadata": {},
    "source": [
     "## Importing libraries"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "334dac3c",
+   "id": "99831c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5251d0a",
+   "id": "a8daae8b",
    "metadata": {},
    "source": [
     "## Loading Dataset"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f8ddadf7",
+   "id": "06e74dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5b5290bb",
+   "id": "60c63cb6",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502cb9b3",
+   "id": "4281475f",
    "metadata": {},
    "source": [
     "## EDA"
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "194415fc",
+   "id": "cd81b4b4",
    "metadata": {},
    "outputs": [
     {
@@ -342,13 +342,14 @@
     }
    ],
    "source": [
+    "#Check shape of dataframe \n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b0668f5d",
+   "id": "e37e974b",
    "metadata": {},
    "outputs": [
     {
@@ -392,13 +393,14 @@
     }
    ],
    "source": [
+    "#Check for null values \n",
     "data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d3e6c198",
+   "id": "c22afd39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d61e19f0",
+   "id": "316cbde8",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7f0413a1",
+   "id": "74e955ad",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e0f51975",
+   "id": "cae349ee",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "16c027a4",
+   "id": "6d8e286d",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "41a988d7",
+   "id": "4d4dcb09",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cc489c20",
+   "id": "0f42cae9",
    "metadata": {},
    "outputs": [
     {
@@ -551,17 +553,18 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dac036f8",
+   "id": "e8377a89",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Replace missing values with median value for income \n",
     "data[\"Income\"].fillna((data[\"Income\"].median()), inplace = True) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "dd0eb8b4",
+   "id": "a9af970f",
    "metadata": {},
    "outputs": [
     {
@@ -614,8 +617,442 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "95e35a68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add column with age based on Year_Birth\n",
+    "data[\"Age\"] = 2014 - data[\"Year_Birth\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "698b5833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'Year_Birth', 'Education', 'Marital_Status', 'Income', 'Kidhome',\n",
+       "       'Teenhome', 'Dt_Customer', 'Recency', 'MntWines', 'MntFruits',\n",
+       "       'MntMeatProducts', 'MntFishProducts', 'MntSweetProducts',\n",
+       "       'MntGoldProds', 'NumDealsPurchases', 'NumWebPurchases',\n",
+       "       'NumCatalogPurchases', 'NumStorePurchases', 'NumWebVisitsMonth',\n",
+       "       'AcceptedCmp3', 'AcceptedCmp4', 'AcceptedCmp5', 'AcceptedCmp1',\n",
+       "       'AcceptedCmp2', 'Complain', 'Z_CostContact', 'Z_Revenue', 'Response',\n",
+       "       'Age'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bd99de4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add column with total spendings over all categories \n",
+    "all_cat = ['MntWines','MntFruits','MntMeatProducts', 'MntFishProducts', 'MntSweetProducts',\n",
+    "'MntGoldProds']\n",
+    "data[\"Spending\"] = data[all_cat].sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7a6e4474",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Single', 'Together', 'Married', 'Divorced', 'Widow', 'Alone',\n",
+       "       'Absurd', 'YOLO'], dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Marital_Status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6e8406b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function for either people who live together(1) or alone(0)\n",
+    "\n",
+    "def home_situation(status):\n",
+    "    if status == \"Together\":\n",
+    "        return 1\n",
+    "    elif status == \"Married\":\n",
+    "        return 1 \n",
+    "    else: \n",
+    "        return 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "522a287a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new column for Home_Situation \n",
+    "data[\"Home_Situation\"] = data['Marital_Status'].apply(home_situation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "89c837ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Year_Birth</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Kidhome</th>\n",
+       "      <th>Teenhome</th>\n",
+       "      <th>Dt_Customer</th>\n",
+       "      <th>Recency</th>\n",
+       "      <th>MntWines</th>\n",
+       "      <th>MntFruits</th>\n",
+       "      <th>MntMeatProducts</th>\n",
+       "      <th>MntFishProducts</th>\n",
+       "      <th>MntSweetProducts</th>\n",
+       "      <th>MntGoldProds</th>\n",
+       "      <th>NumDealsPurchases</th>\n",
+       "      <th>NumWebPurchases</th>\n",
+       "      <th>NumCatalogPurchases</th>\n",
+       "      <th>NumStorePurchases</th>\n",
+       "      <th>NumWebVisitsMonth</th>\n",
+       "      <th>AcceptedCmp3</th>\n",
+       "      <th>AcceptedCmp4</th>\n",
+       "      <th>AcceptedCmp5</th>\n",
+       "      <th>AcceptedCmp1</th>\n",
+       "      <th>AcceptedCmp2</th>\n",
+       "      <th>Complain</th>\n",
+       "      <th>Z_CostContact</th>\n",
+       "      <th>Z_Revenue</th>\n",
+       "      <th>Response</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Spending</th>\n",
+       "      <th>Home_Situation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5524</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>58138.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-09-04</td>\n",
+       "      <td>58</td>\n",
+       "      <td>635</td>\n",
+       "      <td>88</td>\n",
+       "      <td>546</td>\n",
+       "      <td>172</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1617</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2174</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>46344.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-03-08</td>\n",
+       "      <td>38</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4141</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>71613.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-08-21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>426</td>\n",
+       "      <td>49</td>\n",
+       "      <td>127</td>\n",
+       "      <td>111</td>\n",
+       "      <td>21</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>776</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6182</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>26646.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-02-10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5324</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>58293.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-01-19</td>\n",
+       "      <td>94</td>\n",
+       "      <td>173</td>\n",
+       "      <td>43</td>\n",
+       "      <td>118</td>\n",
+       "      <td>46</td>\n",
+       "      <td>27</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>422</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ID  Year_Birth   Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
+       "0  5524        1957  Graduation         Single  58138.0        0         0   \n",
+       "1  2174        1954  Graduation         Single  46344.0        1         1   \n",
+       "2  4141        1965  Graduation       Together  71613.0        0         0   \n",
+       "3  6182        1984  Graduation       Together  26646.0        1         0   \n",
+       "4  5324        1981         PhD        Married  58293.0        1         0   \n",
+       "\n",
+       "  Dt_Customer  Recency  MntWines  MntFruits  MntMeatProducts  MntFishProducts  \\\n",
+       "0  2012-09-04       58       635         88              546              172   \n",
+       "1  2014-03-08       38        11          1                6                2   \n",
+       "2  2013-08-21       26       426         49              127              111   \n",
+       "3  2014-02-10       26        11          4               20               10   \n",
+       "4  2014-01-19       94       173         43              118               46   \n",
+       "\n",
+       "   MntSweetProducts  MntGoldProds  NumDealsPurchases  NumWebPurchases  \\\n",
+       "0                88            88                  3                8   \n",
+       "1                 1             6                  2                1   \n",
+       "2                21            42                  1                8   \n",
+       "3                 3             5                  2                2   \n",
+       "4                27            15                  5                5   \n",
+       "\n",
+       "   NumCatalogPurchases  NumStorePurchases  NumWebVisitsMonth  AcceptedCmp3  \\\n",
+       "0                   10                  4                  7             0   \n",
+       "1                    1                  2                  5             0   \n",
+       "2                    2                 10                  4             0   \n",
+       "3                    0                  4                  6             0   \n",
+       "4                    3                  6                  5             0   \n",
+       "\n",
+       "   AcceptedCmp4  AcceptedCmp5  AcceptedCmp1  AcceptedCmp2  Complain  \\\n",
+       "0             0             0             0             0         0   \n",
+       "1             0             0             0             0         0   \n",
+       "2             0             0             0             0         0   \n",
+       "3             0             0             0             0         0   \n",
+       "4             0             0             0             0         0   \n",
+       "\n",
+       "   Z_CostContact  Z_Revenue  Response  Age  Spending  Home_Situation  \n",
+       "0              3         11         1   57      1617               0  \n",
+       "1              3         11         0   60        27               0  \n",
+       "2              3         11         0   49       776               1  \n",
+       "3              3         11         0   30        53               1  \n",
+       "4              3         11         0   33       422               1  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1ae79f65",
+   "id": "e4023196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"kids_total\"] = data.loc[\"Kidhome\",\"Teenhome\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c498e003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function for people with kids(1) or none(0)\n",
+    "\n",
+    "def kids(num_kids):\n",
+    "    if num_kids > 0: \n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09332d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93b98d04",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -623,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2465f01b",
+   "id": "2d2cd822",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -631,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8cdc5ba",
+   "id": "2a515dee",
    "metadata": {},
    "outputs": [],
    "source": []
