--- a/notebooks/Marketing_Campaign_Experiment.ipynb
+++ b/notebooks/Marketing_Campaign_Experiment.ipynb
@@ -2432,11 +2432,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e7e36d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test='test'"
+   ]
   },
   {
    "cell_type": "code",
@@ -2487,7 +2489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
