--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -2880,36 +2880,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "298c4e2d",
+   "metadata": {},
+   "source": [
+    "## Create Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c220171a",
+   "metadata": {},
+   "source": [
+    "### Define X and y "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e443bf0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df_cleaned.drop(columns=\"Response\")\n",
+    "y = df_cleaned[\"Response\"]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71840ed7",
+   "cell_type": "markdown",
+   "id": "441bfc81",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "426abcc5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05dd108a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Test Train Split"
+   ]
   },
   {
    "cell_type": "code",
@@ -2917,12 +2920,31 @@
    "id": "e83bf31f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = \n",
+    "train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4299ea11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3926e03b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f49adcf8",
    "metadata": {},
    "outputs": [],
    "source": []
