--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a536a6dc",
    "metadata": {},
    "outputs": [
@@ -2870,7 +2870,7 @@
        "19   29       1.0    0.0         0.0     0.0  0.0         0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2878,6 +2878,14 @@
    "source": [
     "df_cleaned.head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "593fc5c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2916,13 +2924,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e83bf31f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = \n",
-    "train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
