--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "1b1ca18b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "pd.set_option('display.max_columns', None)\n",
@@ -43,7 +34,8 @@
     "\n",
     "from IPython.display import Image\n",
     "#import pydotplus\n",
-    "from sklearn.tree import export_graphviz"
+    "from sklearn.tree import export_graphviz\n",
+    "from sklearn.model_selection import GridSearchCV\n"
    ]
   },
   {
@@ -2882,7 +2874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593fc5c6",
+   "id": "645411f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2934,75 +2926,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4299ea11",
+   "execution_count": 41,
+   "id": "a9efd537",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1792, 30)\n",
+      "(1792,)\n",
+      "(448, 30)\n",
+      "(448,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(y_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2f69153",
+   "metadata": {},
+   "source": [
+    "### GridSearch"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3926e03b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Instanciate model\n",
+    "model = RandomForestClassifier(random_state=1)\n",
+    "\n",
+    "# Hyperparameter Grid\n",
+    "grid = {'max_depth': list(range(1,30))}\n",
+    "\n",
+    "# Instanciate Grid Search\n",
+    "search = GridSearchCV(model, grid, \n",
+    "                           scoring = 'accuracy',\n",
+    "                           cv = 5,\n",
+    "                           n_jobs=-1 # paralellize computation\n",
+    "                          ) \n",
+    "\n",
+    "# Fit data to Grid Search\n",
+    "search.fit(X_train,y_train);"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f49adcf8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=11, random_state=1)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Best score\n",
+    "search.best_score_\n",
+    "\n",
+    "# Best Params\n",
+    "search.best_params_\n",
+    "\n",
+    "# Best estimator\n",
+    "search.best_estimator_"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8847213b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8872799987550769"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search.best_score_\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0228cac5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "bb11a97f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 11}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "search.best_params_\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c188f8d8",
+   "metadata": {},
+   "source": [
+    "### make prediction on X_test"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a584ea60",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rfc_pred = search.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "id": "63785641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(448,)\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rfc_pred.shape)\n",
+    "print(rfc_pred[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "48b3c8f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "accuracy_test = metrics.accuracy_score(y_test, rfc_pred)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "50d8865f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8660714285714286"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_test"
+   ]
   },
   {
    "cell_type": "code",
