accuracy of test

--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -2874,7 +2874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645411f2",
+   "id": "7a3b687f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2927,7 +2927,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a9efd537",
+   "id": "8a6854c2",
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f69153",
+   "id": "19904de6",
    "metadata": {},
    "source": [
     "### GridSearch"
@@ -3066,7 +3066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c188f8d8",
+   "id": "0cc29cb3",
    "metadata": {},
    "source": [
     "### make prediction on X_test"
@@ -3085,7 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "63785641",
+   "id": "b4cb548c",
    "metadata": {},
    "outputs": [
     {
@@ -3100,6 +3100,14 @@
    "source": [
     "print(rfc_pred.shape)\n",
     "print(rfc_pred[0:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0efe8dab",
+   "metadata": {},
+   "source": [
+    "### accuracy of test results"
    ]
   },
   {
