--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "1b1ca18b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "pd.set_option('display.max_columns', None)\n",
@@ -2897,7 +2906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e443bf0f",
    "metadata": {},
    "outputs": [],
@@ -2916,7 +2925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "e83bf31f",
    "metadata": {},
    "outputs": [],
@@ -2926,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "8a6854c2",
    "metadata": {},
    "outputs": [
@@ -2958,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "3926e03b",
    "metadata": {},
    "outputs": [],
@@ -2982,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "f49adcf8",
    "metadata": {},
    "outputs": [
@@ -2992,7 +3001,7 @@
        "RandomForestClassifier(max_depth=11, random_state=1)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "8847213b",
    "metadata": {},
    "outputs": [
@@ -3020,7 +3029,7 @@
        "0.8872799987550769"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "bb11a97f",
    "metadata": {},
    "outputs": [
@@ -3041,23 +3050,9 @@
        "{'max_depth': 11}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n",
-      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n",
-      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n",
-      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
     }
    ],
    "source": [
@@ -3074,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "a584ea60",
    "metadata": {},
    "outputs": [],
@@ -3084,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "b4cb548c",
    "metadata": {},
    "outputs": [
@@ -3112,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "48b3c8f8",
    "metadata": {},
    "outputs": [],
@@ -3122,7 +3117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "50d8865f",
    "metadata": {},
    "outputs": [
@@ -3132,9 +3127,23 @@
        "0.8660714285714286"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/samtims/.pyenv/versions/3.8.12/envs/frieda/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
     }
    ],
    "source": [
@@ -3150,19 +3159,17 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51ef7c6",
+   "cell_type": "markdown",
+   "id": "b4b2bbf7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Customer Lifetime Value"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddf9040b",
+   "cell_type": "markdown",
+   "id": "112f0a6f",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
