--- a/notebooks/Marketing_Campaign_Random_Forest.ipynb
+++ b/notebooks/Marketing_Campaign_Random_Forest.ipynb
@@ -3160,7 +3160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b2bbf7",
+   "id": "11446862",
    "metadata": {},
    "source": [
     "# Customer Lifetime Value"
@@ -3168,8 +3168,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112f0a6f",
+   "id": "5cb32363",
    "metadata": {},
+   "source": [
+    "Customer lifetime value is the total worth to a business of a customer over the whole period of their relationship."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd7c4e9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
